--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </header>
         <img src="img/paletas.png"/>
         <br/>
-        Paletas Beny
+        Paquete Beny $45 MXN
         <br/>
        
         <footer>
