--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         </header>
         <img src="img/paletas.png"/>
         <br/>
-        Paquete Beny $45 MXN
+        Bolsa Kwaii (Dulces picantes) $45 MXN
         <br/>
        
         <footer>
             <p>Author: Sofia Morales</p>
-            <p><a href="mailto:dannasofia.delacruz@gmail.com">dannasofia.delacruz@gmail.com</a></p>
-          </footer>
+            <p>Para comprar, escribe un correo a: <a href="mailto:dannasofia.delacruz@gmail.com">dannasofia.delacruz@gmail.com</a></p>
+            <p>¡Gracias! ❤️</p>
+        </footer>
     </body>
 </html>
