--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </header>
         <img src="img/paletas.png"/>
         <br/>
-        Bolsa Kwaii (Dulces picantes) $45 MXN
+        Bolsa Kawaii (Dulces picantes) $45 MXN
         <br/>
        
         <footer>
